objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountId18digit__c</fullName>
        <description>This is an admin field used for implementations and can be used for reports as well</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an admin field used for implementations and can be used for reports as well</inlineHelpText>
        <label>AccountId18digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Value_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for tagging accounts, where a customer success engagement shall be happening but no dedicated person for follow up has been identified.
Request vipra 13.11.2017</description>
        <label>Business Value Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSM_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact person from Tricentis, who is responsible for this particular account.
Request vipra 13.11.2017</description>
        <label>CSM Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Since__c</fullName>
        <description>Displays the first closed won date of an opportunity.</description>
        <formula>First_Won_Opportunity__r.Closed_Won_Date__c</formula>
        <label>Customer Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Conflict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conflict</label>
        <referenceTo>DSCORGPKG__Conflict__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DO_3yr_Employees_Growth__c</fullName>
        <label>3yr Employees Growth %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DO_3yr_Sales_Growth__c</fullName>
        <label>3yr Sales Growth %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DeletedFromDiscoverOrg__c</fullName>
        <label>DeletedFromDiscoverOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>false</label>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Created_On__c</fullName>
        <label>Created by DiscoverOrg</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_First_Update__c</fullName>
        <label>DiscoverOrg First Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_FullCountryName__c</fullName>
        <label>DiscoverOrg Country Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
        <description>DiscoverOrg DB object ID</description>
        <label>DiscoverOrg ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_LastUpdate__c</fullName>
        <label>DiscoverOrg Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_State_Full_Name__c</fullName>
        <label>DiscoverOrg State Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Technologies__c</fullName>
        <label>DiscoverOrg Technologies</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Exclude_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can use this checkbox to exclude record from getting updated from DiscoverOrg.</description>
        <label>Exclude from DiscoverOrg Auto-Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__External_DiscoverOrg_Id__c</fullName>
        <externalId>true</externalId>
        <label>DiscoverOrg Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Fortune_Rank__c</fullName>
        <label>Fortune Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ITOrgChart__c</fullName>
        <formula>IF(ISBLANK(DSCORGPKG__DiscoverOrg_ID__c) = false,  
     HYPERLINK(
           &apos;/apex/DSCORGPKG__itorgchart?co_id=&apos;  +  DSCORGPKG__DiscoverOrg_ID__c ,
            &apos;View&apos;,
            &apos;_new&apos;) , 
    &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Org Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__IT_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IT Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__IT_Employees__c</fullName>
        <label>IT Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>DiscoverOrg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Locked_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NAICS_Codes__c</fullName>
        <label>Primary NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Ownership__c</fullName>
        <label>Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__SIC_Codes__c</fullName>
        <label>Primary SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <description>Management wants to review data quality</description>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <description>Management wants to review data quality</description>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>For data management - is being used for lead-account matching</description>
        <label>Email Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagio_tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shall be used to track if this particular account is included in the Engagio pilot for APAC</description>
        <label>Engagio_tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Won_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the first closed won opportunity</description>
        <label>First Won Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts (First Won Opportunity)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fortune_Ranking__c</fullName>
        <description>Seller shall know what ranking the account has in Fortune1000</description>
        <label>Fortune 1000 Ranking</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_group_name__c</fullName>
        <description>Finance naming for parent accounts.</description>
        <inlineHelpText>Maintained by Finance</inlineHelpText>
        <label>Internal group name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be used to define if a customers logo (digital) is allowed to be used by Tricentis.</description>
        <inlineHelpText>Should be used to define if a customers logo (digital) is allowed to be used by Tricentis.</inlineHelpText>
        <label>Logo Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be used to define if a customers logo (print) is allowed to be used by Tricentis.</description>
        <inlineHelpText>Should be used to define if a customers logo (print) is allowed to be used by Tricentis.</inlineHelpText>
        <label>Logo Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be used to define if a customers name (digital) is allowed to be used by Tricentis.</description>
        <inlineHelpText>Should be used to define if a customers name (digital) is allowed to be used by Tricentis.</inlineHelpText>
        <label>Name Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be used to define if a customers name (print) is allowed to be used by Tricentis.</description>
        <inlineHelpText>Should be used to define if a customers name (print) is allowed to be used by Tricentis.</inlineHelpText>
        <label>Name Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunity__c</fullName>
        <description>Is needed for the dashboards built by DR
Request DemanrdRamp: 30.11.2017

Power of one - counts opportunity number</description>
        <label>Number of Opportunity</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>Checkbox shall identify if account is parent account or not.</description>
        <formula>IF
(
 ParentId = &apos;&apos;, TRUE, FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GSI Services Partner</fullName>
                </value>
                <value>
                    <fullName>ISV Partner</fullName>
                </value>
                <value>
                    <fullName>Regional Services Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <defaultValue>1</defaultValue>
        <description>always 1, used for reporting</description>
        <inlineHelpText>always 1, used for reporting</inlineHelpText>
        <label>PowerOfOne</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Debitor_ID__c</fullName>
        <description>This shall be used to capture the debitor number from the SAP system.
Request: bazwe 26.01.2018 - to be used for the SAP integration</description>
        <label>SAP Debitor ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Now_Company_ID__c</fullName>
        <description>Captures the ID of the Service Now Company object</description>
        <label>Service Now Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_remarks__c</fullName>
        <description>Should be used to capture special remarks for a customers if their name or logo are allowed to be used by Tricentis.</description>
        <inlineHelpText>Should be used to capture special remarks for a customers if their name or logo are allowed to be used by Tricentis.</inlineHelpText>
        <label>Special remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>For data management - Defines status of account (e.g.: Existing customer etc.).</description>
        <inlineHelpText>Defines status of account (e.g.: Existing customer etc.).</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Existing-Active</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Existing-Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For data management; only editable by Sales Leaders</description>
        <inlineHelpText>Defines if an Account is on the List for Insight (Emmet) to provide Contacts from their rolodex</inlineHelpText>
        <label>Ignite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                    <default>true</default>
                    <label>Tier 3</label>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tricentis_Services_Partner_Engaged__c</fullName>
        <description>List of Tricentis&apos; Services partners engaged on this account.</description>
        <inlineHelpText>List of Tricentis&apos; Services partners engaged on this account.</inlineHelpText>
        <label>Tricentis Services Partner Engaged</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
                <value>
                    <fullName>BearingPoint</fullName>
                </value>
                <value>
                    <fullName>Capgemini</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM Global Services</fullName>
                </value>
                <value>
                    <fullName>Infosys</fullName>
                </value>
                <value>
                    <fullName>Lockheed Martin</fullName>
                </value>
                <value>
                    <fullName>LogicaCMG</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Northrop Grumman</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SAIC</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Siemens Business Services</fullName>
                </value>
                <value>
                    <fullName>Tata Consultancy Services</fullName>
                </value>
                <value>
                    <fullName>Unisys</fullName>
                </value>
                <value>
                    <fullName>Wipro</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Tech Mahindra</fullName>
                </value>
                <value>
                    <fullName>Mindtree</fullName>
                </value>
                <value>
                    <fullName>L&amp;T</fullName>
                </value>
                <value>
                    <fullName>Neotys</fullName>
                </value>
                <value>
                    <fullName>Agosense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bz_partner_account_type_1__c</fullName>
        <description>BZ: Defines the importance of the account for our partner (how valuable this account is for our partner).</description>
        <inlineHelpText>Choose the importance of this particular account defined by our partner.</inlineHelpText>
        <label>Partner Account Type_1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>existing major</fullName>
                </value>
                <value>
                    <fullName>existing minor</fullName>
                </value>
                <value>
                    <fullName>targeted must have</fullName>
                </value>
                <value>
                    <fullName>targeted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bz_partner_account_type_2__c</fullName>
        <description>BZ: Defines the importance of the account for our partner (how valuable this account is for our partner).</description>
        <inlineHelpText>Choose the importance of this particular account defined by our partner.</inlineHelpText>
        <label>Partner Account Type_2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>existing major</fullName>
                </value>
                <value>
                    <fullName>existing minor</fullName>
                </value>
                <value>
                    <fullName>targeted</fullName>
                </value>
                <value>
                    <fullName>targeted must have</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bz_partner_account_type_3__c</fullName>
        <description>BZ: Defines the importance of the account for our partner (how valuable this account is for our partner).</description>
        <inlineHelpText>Choose the importance of this particular account defined by our partner.</inlineHelpText>
        <label>Partner Account Type_3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>existing major</fullName>
                </value>
                <value>
                    <fullName>existing minor</fullName>
                </value>
                <value>
                    <fullName>targeted must have</fullName>
                </value>
                <value>
                    <fullName>targeted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bz_partner_comments_1__c</fullName>
        <description>BZ: Used for comments in partner section.</description>
        <inlineHelpText>Insert comments for/about partner.</inlineHelpText>
        <label>Partner Comments_1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bz_partner_comments_2__c</fullName>
        <description>BZ: Used for comments in partner section.</description>
        <inlineHelpText>Insert comments for/about partner.</inlineHelpText>
        <label>Partner Comments_2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bz_partner_comments_3__c</fullName>
        <description>BZ: Used for comments in partner section.</description>
        <inlineHelpText>Insert comments for/about partner.</inlineHelpText>
        <label>Partner Comments_3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bz_partner_contact_Person_name_2__c</fullName>
        <description>BZ: Contact person details the partner uses for this account.</description>
        <inlineHelpText>Please use the following nomenclature: Firstname Lastname (e.g.: John Smith).</inlineHelpText>
        <label>Partner Contact Person Name_2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_contact_person_cellphone_1__c</fullName>
        <description>BZ: Contact person details the partner uses for this account.</description>
        <inlineHelpText>Please use the following nomenclature: e.g.: +43 664 111 222 33</inlineHelpText>
        <label>Partner Contact Person Cellphone_1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>bz_partner_contact_person_cellphone_2__c</fullName>
        <description>BZ: Contact person details the partner uses for this account.</description>
        <inlineHelpText>Please use the following nomenclature: e.g.: +43 664 111 222 33</inlineHelpText>
        <label>Partner Contact Person Cellphone_2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>bz_partner_contact_person_cellphone_3__c</fullName>
        <description>BZ: Contact person details the partner uses for this account.</description>
        <inlineHelpText>Please use the following nomenclature: e.g.: +43 664 111 222 33</inlineHelpText>
        <label>Partner Contact Person Cellphone_3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>bz_partner_contact_person_email_1__c</fullName>
        <description>BZ: Contact person details the partner uses for this account.</description>
        <label>Partner Contact Person E-Mail_1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_contact_person_email_2__c</fullName>
        <description>BZ: Contact person details the partner uses for this account.</description>
        <label>Partner Contact Person E-Mail_2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_contact_person_email_3__c</fullName>
        <description>BZ: Contact person details the partner uses for this account.</description>
        <label>Partner Contact Person E-Mail_3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_contact_person_name_1__c</fullName>
        <description>BZ: Contact person details the partner uses for this account.</description>
        <inlineHelpText>Please use the following nomenclature: Firstname Lastname (e.g.: John Smith).</inlineHelpText>
        <label>Partner Contact Person Name_1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_contact_person_name_3__c</fullName>
        <description>BZ: Contact person details the partner uses for this account.</description>
        <inlineHelpText>Please use the following nomenclature: Firstname Lastname (e.g.: John Smith).</inlineHelpText>
        <label>Partner Contact Person Name_3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_geo_1__c</fullName>
        <description>BZ: Geo the partner uses for this account.</description>
        <inlineHelpText>Insert the geo the partner specified for this account.</inlineHelpText>
        <label>Partner Geo_1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_geo_2__c</fullName>
        <description>BZ: Geo the partner uses for this account.</description>
        <inlineHelpText>Insert the geo the partner specified for this account.</inlineHelpText>
        <label>Partner Geo_2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_geo_3__c</fullName>
        <description>BZ: Geo the partner uses for this account.</description>
        <inlineHelpText>Insert the geo the partner specified for this account.</inlineHelpText>
        <label>Partner Geo_3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bz_partner_industry_1__c</fullName>
        <description>BZ: Industry the partner uses for this account.</description>
        <inlineHelpText>Insert the industry the partner specified for this account.</inlineHelpText>
        <label>Partner Industry_1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>